# audition-dates

./: .dockerignore  Cargo.toml  Dockerfile  Rocket.toml  docker-compose.yml  sqlx-data.json  todo.txt
locales/de/: main.ftl
locales/en/: main.ftl
migrations/: 20220223143340_auth.sql  20220227140717_password-reset.sql  20220228103536_data.sql  20220313120222_announcements.sql  20220923105122_chamber-choir-1.sql  20220923110950_chamber-choir-2.sql  20220929143010_date-cancel.sql  20221005091219_waiting-list.sql  20221006124705_better-model.sql  20221014141216_chamber-choir-3.sql  20221014142127_better-waiting-list.sql  20221014220354_waiting-list-fix.sql
src/: admin.rs  auth.rs  dashboard.rs  language.rs  mail.rs  main.rs  model.rs  user.rs  util.rs
src/model/: date_type.rs  form.rs  mod.rs
static/: base.js  style.css
templates/: announcements.html.tera  base.html.tera  booking-delete-confirm.html.tera  booking-delete.html.tera  booking-new.html.tera  booking-success.html.tera  dashboard.html.tera  date-cancel.html.tera  date-gone.html.tera  date-new-1.html.tera  date-new-2.html.tera  date-overview.html.tera  impressum.html.tera  index.html.tera  invite.html.tera  login.html.tera  password-reset-request.html.tera  password-reset.html.tera  register.html.tera  room-manage.html.tera  test.html.tera  waiting-list-confirmation.html.tera  waiting-list-unsubscribe.html.tera
templates-mail/: booking.tera  invite.tera  password-reset.tera  password-was-reset.tera  waiting-list-confirmation.tera  waiting-list-invite.tera
